# cmake-test-proj

./: CMakeLists.txt  main.cpp  readme.md
include/: CMakeLists.txt
include/greet/: CMakeLists.txt  greet.cpp  greet.h
include/zhlmath/: vec_add.hpp  vec_prod.hpp
